分销和账户新增密码丢失问题

--- a/app/scripts/views/directive/nav-top/nav-account.html
+++ b/app/scripts/views/directive/nav-top/nav-account.html
@@ -5,9 +5,9 @@
     <li class="admin-dropdown" ng-show="env_name">
         <a ng-bind="env_name"></a>
     </li>
-    <li class="admin-dropdown" ng-if="hjm.city_name">
-        <a ng-bind="hjm.city_name" ng-click="change_city()"></a>
-    </li>
+    <!--<li class="admin-dropdown" ng-if="hjm.city_name">-->
+        <!--<a ng-bind="hjm.city_name" ng-click="change_city()"></a>-->
+    <!--</li>-->
     <!--<li class="dropdown" uib-dropdown="" on-toggle="toggled(open)">-->
     <!--<a class="dropdown-toggle notoggle"-->
     <!--uib-dropdown-toggle="" aria-haspopup="true"-->
