--- a/app/scripts/views/biz/account/update.html
+++ b/app/scripts/views/biz/account/update.html
@@ -14,17 +14,17 @@
                              placeholder="账户ID" ng-disabled="$stateParams.account_id"></div>
                         <div form-input text="登录账号" ng-model="param.username" placeholder="登录账号"
                              required="true" ng-disabled="$stateParams.account_id"></div>
-                        <div form-input text="初始化密码" ng-model="userpass" placeholder="初始化密码"
+                        <div form-input text="初始化密码" ng-model="param.userpass" placeholder="初始化密码"
                              ng-if="!$stateParams.account_id"></div>
                         <div form-input text="手机号码" ng-model="param.mobile" min="11" max="11" placeholder="11位数字"
                              required="true"></div>
-                        <div form-radio text="角色" ng-model="param.role" required="true" default="param.role"
+                        <div form-radio text="角色" ng-model="param.role" required="true" default="{{param.role}}"
                              source="roles"></div>
                         <!--source="[{text:'op',value:'op'},{text:'pm',value:'pm'},{text:'admin',value:'admin'},{text:'cw',value:'cw'}]"-->
                         <!--<div form-checkbox text="所属城市列表" ng-model="param.city_list" required="true"-->
                         <!--source="openCitys"></div>-->
-                        <div form-radio text="定位城市" ng-model="param.city_name" required="true" default="上海市"
-                             source="[{text:'上海市',value:'上海市'}]" source-api=""></div>
+                        <!--<div form-radio text="定位城市" ng-model="param.city_name" required="true" default="上海市"-->
+                             <!--source="[{text:'上海市',value:'上海市'}]" source-api=""></div>-->
                         <div form-radio text="使用状态" ng-model="param.status" required="true" default="1"
                              source="[{text:'启用',value:'1'},{text:'禁用',value:'2'}]" source-api=""></div>
                         <div form-textarea="" text="备注" ng-model="param.remark"></div>
