分销功能 的 课程详情页编辑

--- a/app/scripts/views/biz/act/distribution.html
+++ b/app/scripts/views/biz/act/distribution.html
@@ -12,10 +12,10 @@
       <div form-input text="团外一级" ng-model="param.poster_level_one" required="true" type="number" min="0" max="100"></div>
       <!--<div form-input text="团外二级" ng-model="param.poster_level_two" required="true"></div>-->
 
-      <div form-radio text="课程详情页是否显示分销海报" ng-model="param.open_product_poster" required="true" default="1"
-           source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
-      <div form-radio text="拼课详情页是否显示分销海报" ng-model="param.open_groupbuy_poster" required="true" default="1"
-           source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
+      <!--<div form-radio text="课程详情页是否显示分销海报" ng-model="param.open_product_poster" required="true" default="1"-->
+           <!--source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>-->
+      <!--<div form-radio text="拼课详情页是否显示分销海报" ng-model="param.open_groupbuy_poster" required="true" default="1"-->
+           <!--source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>-->
     </div>
   </div>
   <a class="btn btn-success btn-rounded pull-right" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
