函数名修改

--- a/app/scripts/views/directive/upload/showMediaUpload.html
+++ b/app/scripts/views/directive/upload/showMediaUpload.html
@@ -62,7 +62,7 @@
                             <div class="handle col-md-2 pull-right">
                                 <div ng-class="{'hide':disabled}">
                                     <button type="button" class="btn btn-danger btn-xs btn-rounded"
-                                            ng-click="delAudio(k,uploader.queue[k])"
+                                            ng-click="delMedia(k,uploader.queue[k])"
                                             show-role="'{{disabledRole}}'">
                                         <span class="glyphicon glyphicon-trash"></span> 移除
                                     </button>
