证书增加口算小达人

--- a/app/scripts/views/biz/cert/update.html
+++ b/app/scripts/views/biz/cert/update.html
@@ -24,7 +24,7 @@
                         <div form-input text="视频组ID" ng-model="param.video_group_id" required="true"></div>
 
                         <div form-radio text="证书样式" ng-model="param.type" default="1" required="true"
-                             source="[{text:'名校证书',value:'1'},{text:'活动勋章',value:'2'}]"></div>
+                             source="[{text:'名校证书',value:'1'},{text:'活动勋章',value:'2'},{text:'口算小达人',value:'3'}]"></div>
 
                         <div form-image-single text="添加证书缩略图（获得）" ng-model="param.selected_thumb_image"
                              required="true"></div>
