--- a/app/scripts/views/directive/upload/showUpload.html
+++ b/app/scripts/views/directive/upload/showUpload.html
@@ -1,7 +1,7 @@
 <div class="" style="border: 1px #ccc solid;">
     <style type="text/css">
         .upload-image {
-            width: 100%;
+            width: 64px;
             height: 100%;
             overflow: hidden;
             background: #eee;
