百度课程排序  主订单列表优化显示

--- a/app/scripts/views/third/courses/update.html
+++ b/app/scripts/views/third/courses/update.html
@@ -11,6 +11,8 @@
                         <div form-input text="标题" ng-model="param.title"
                              required="true" placeholder="课程名称,不超过30个字" minlength="1" maxlength="30"></div>
 
+                        <div form-input text="排序" ng-model="param.order_by" placeholder="数字:1,2,3,4,5" required="true"></div>
+
                         <div form-input text="课程价格" ng-model="param.price" required="true"></div>
 
                         <div form-input text="课程预览地址URL" ng-model="param.preview" required="true"></div>
