详情页和拼团页面分销的分享配置

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -477,10 +477,10 @@
                         <div form-radio text="是否启用朋友圈海报" ng-model="param.wechat_bill" required="true" type="number" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
 
-                        <div form-radio text="课程详情页是否显示分销海报" ng-model="param.open_product_poster" required="true" default="2"
-                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
-                        <div form-radio text="拼课详情页是否显示分销海报" ng-model="param.open_groupbuy_poster" required="true" default="2"
-                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
+                        <!--<div form-radio text="课程详情页是否显示分销海报" ng-model="param.open_product_poster" required="true" default="2"-->
+                             <!--source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>-->
+                        <!--<div form-radio text="拼课详情页是否显示分销海报" ng-model="param.open_groupbuy_poster" required="true" default="2"-->
+                             <!--source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>-->
 
                         <div form-radio text="是否显示在日历" ng-model="param.show_in_calendar" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" required="true"></div>
