--- a/app/scripts/views/live/videogroups/task.html
+++ b/app/scripts/views/live/videogroups/task.html
@@ -67,8 +67,8 @@
                     <td dnd-nodrag><span ng-bind="item.options_count"></span></td>
                     <td dnd-nodrag><span ng-bind="item.updated_at"></span></td>
                     <td ng-show="handle">
-                        <div video-work="item.id" handle="update" title="编辑" class="pull-right"></div>
-                        <a class="btn btn-danger btn-sm btn-bordered" ng-click="del(key)">删除</a>
+                        <div video-work="item.id" handle="update" title="编辑"></div>
+                        <a class="btn btn-danger btn-sm btn-rounded" ng-click="del(key)" class="pull-right">删除</a>
                     </td>
                 </tr>
                 <tr class="dndPlaceholder">
