--- a/app/scripts/views/live/videogroups/work.html
+++ b/app/scripts/views/live/videogroups/work.html
@@ -8,10 +8,12 @@
                 <div form-radio text="题目类型" ng-model="param.type" required="true" default="1" ng-show="true"
                      source="[{text:'单选',value:'1'},{text:'多选',value:'2'}]" source-api=""></div>
 
+                <div video-work-stems="" ng-model="param.stems" handle="handle"></div>
+
                 <div form-radio text="选项类型" ng-model="param.option_type" required="true" default="1"
-                     source="[{text:'1111',value:'1'},{text:'21212',value:'2'}]" source-api=""></div>
+                     source="[{text:'文字',value:'1'},{text:'图片',value:'2'},{text:'语音',value:'3'}]" source-api=""></div>
 
-
+                <div video-work-option ng-model="param.options" handle="handle"></div>
 
                 <a class="btn btn-success btn-rounded pull-right " ng-disabled="FormBody.$invalid" ng-click="submit()">保存草稿</a>
             </form>
