拼团延长时间

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -170,7 +170,7 @@
                              default="1" ng-if="param.category!=3" source-api=""></div>
 
                         <div form-radio text="拼团时间是否延长" type="radio" ng-model="param.groupbuy_delay" required="true"
-                             source="[{text:'是',value:1},{text:'否',value:2}]" type="number" default="1" source-api=""></div>
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" default="1" source-api=""></div>
                         <!--<div form-table text="课程类目" ng-model="param.options" max="1"-->
                         <!--ng-show="param.category!=4" required="true"-->
                         <!--columns="[{'name': 'ID', 'field': 'option_id',hide:'true'},-->
