--- a/app/scripts/views/live/videogroups/work.html
+++ b/app/scripts/views/live/videogroups/work.html
@@ -8,6 +8,8 @@
                 <div form-radio text="题目类型" ng-model="param.type" required="true" default="1" ng-show="true"
                      source="[{text:'单选',value:'1'},{text:'多选',value:'2'}]" source-api=""></div>
 
+                <h3 class="col-sm-offset-1 col-sm-11 text-primary">题干</h3>
+
                 <div video-work-stems="" ng-model="param.stems" handle="handle"></div>
 
                 <div form-radio text="选项类型" ng-model="param.option_type" required="true" default="1"
