--- a/app/scripts/views/directive/upload/showMediaUpload.html
+++ b/app/scripts/views/directive/upload/showMediaUpload.html
@@ -1,7 +1,7 @@
-<div>
+<div style="border: 1px #ccc solid;">
     <style type="text/css">
         .upload-image {
-            width: 100%;
+            width: 64px;
             height: 100%;
             overflow: hidden;
             background: #eee;
@@ -28,7 +28,7 @@
     </style>
     <div class="row">
         <div class="panel panel-info" style="border: 0">
-            <div class="panel-body dndsimpleDemo">
+            <div class="panel-body dndsimpleDemo" ng-show="media&&media.length>0">
                 <!--<pre ng-bind="uploader.queue | json">  这个不能json 这个自定义的对象里面有循环嵌套 </pre>-->
                 <!--<pre ng-bind="images | json"></pre>-->
                 <ul class="list-group">
@@ -95,11 +95,11 @@
             </div>
             <div class="col-sm-10">
                 <button type="button" class="btn btn-success btn-rounded" ng-click="uploader.uploadAll()"
-                        ng-disabled="!uploader.getNotUploadedItems().length">
+                        ng-hide="hideBar[0] == 1" ng-disabled="!uploader.getNotUploadedItems().length">
                     <span class="glyphicon glyphicon-upload"></span> 全部上传
                 </button>
                 <button type="button" class="btn btn-danger btn-rounded" ng-click="removeAll()"
-                        ng-disabled="!uploader.queue.length">
+                        ng-hide="hideBar[1] == 1" ng-disabled="!uploader.queue.length">
                     <span class="glyphicon glyphicon-trash"></span> 全部移除
                 </button>
             </div>
