--- a/app/scripts/views/directive/upload/showMediaUpload.html
+++ b/app/scripts/views/directive/upload/showMediaUpload.html
@@ -26,7 +26,7 @@
             border-radius: 5px;
         }
     </style>
-    <div class="row">
+    <div class="row" style="margin: 0">
         <div class="panel panel-info" style="border: 0">
             <div class="panel-body dndsimpleDemo" ng-show="media&&media.length>0">
                 <!--<pre ng-bind="uploader.queue | json">  这个不能json 这个自定义的对象里面有循环嵌套 </pre>-->
@@ -80,8 +80,8 @@
             </div>
         </div>
     </div>
-    <div ng-class="{'hide':disabled}">
-        <div class="form-group">
+    <div ng-class="{'hide':disabled}" style="padding: 10px;">
+        <div class="form-group" style="margin-bottom: 5px;">
             <!--上传过程:-->
             <div class="col-sm-12">
                 <div class="progress">
@@ -105,5 +105,4 @@
             </div>
         </div>
     </div>
-    <br/>
 </div>
