--- a/app/scripts/views/live/videogroups/task.html
+++ b/app/scripts/views/live/videogroups/task.html
@@ -50,24 +50,26 @@
     <!--<div class="panel-heading">-->
     <!--<h3 class="panel-title inlineBlock">可拖动顺序</h3>-->
     <!--</div>-->
-    <div class="panel-body dndsimpleSubject">
-        <div class="col-sm-12 form-group">
+    <div class="panel-body ">
+        <div class="col-sm-12 form-group dndsimpleSubject">
             <table class="table table-bordered table-striped">
                 <thead>
                 <th>题目ID</th>
                 <th>题型</th>
                 <th>选项数</th>
                 <th>更新时间</th>
-                <th ng-show="handle">操作</th>
+                <th ng-if="handle">操作</th>
                 </thead>
                 <tbody dnd-list="ngModel">
-                <tr ng-repeat="(key,item) in ngModel" dnd-draggable="item" dnd-moved="ngModel.splice(key, 1);" dnd-effect-allowed="move">
+                <tr ng-repeat="(key,item) in param.works" dnd-draggable="item" dnd-moved="ngModel.splice(key, 1);" dnd-effect-allowed="move">
                     <td><label class="label label-primary"><span ng-bind="item.id"></span></label></td>
                     <td dnd-nodrag><span ng-bind="item.type|keyVal:'1':'单选':'2':'多选'"></span></td>
                     <td dnd-nodrag><span ng-bind="item.options_count"></span></td>
                     <td dnd-nodrag><span ng-bind="item.updated_at"></span></td>
-                    <td ng-show="handle">
-                        <div video-work="item.id" handle="update" title="编辑"></div>
+                    <td ng-if="handle">
+                        <span ng-bind="param.room_id"></span>
+                        <span ng-bind="param.video_group_id"></span>
+                        <div video-work="item.id" tasks="param.tasks" room="{{param.room_id}}" video="{{param.video_group_id}}" handle="update" title="编辑"></div>
                         <a class="btn btn-danger btn-sm btn-rounded" ng-click="del(key)" class="pull-right">删除</a>
                     </td>
                 </tr>
