--- a/app/scripts/views/live/videogroups/taskList.html
+++ b/app/scripts/views/live/videogroups/taskList.html
@@ -17,7 +17,7 @@
                 </table>
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <div video-task-view="" ng-model="param.works" handle="handle"></div>
+                        <div video-task-view param="param" handle="handle"></div>
                     </div>
                 </div>
                 <a class="btn btn-success btn-rounded pull-right " ng-disabled="FormBody.$invalid" ng-click="submit()">保存草稿</a>
