--- a/app/scripts/views/live/videogroups/taskList.html
+++ b/app/scripts/views/live/videogroups/taskList.html
@@ -8,7 +8,8 @@
                 <table style="width: 100%;">
                     <tr>
                         <td>
-                            <div video-work handle="add" title="添加" class="pull-right"></div>
+                            <!--<div video-work handle="add" title="添加" class="pull-right"></div>-->
+                            <div video-work="param" ext="param.tasks" handle="add" title="添加" class="pull-right"></div>
                         </td>
                     </tr>
                     <tr>
