--- a/app/scripts/views/live/videogroups/task.html
+++ b/app/scripts/views/live/videogroups/task.html
@@ -67,9 +67,7 @@
                     <td dnd-nodrag><span ng-bind="item.options_count"></span></td>
                     <td dnd-nodrag><span ng-bind="item.updated_at"></span></td>
                     <td ng-if="handle">
-                        <span ng-bind="param.room_id"></span>
-                        <span ng-bind="param.video_group_id"></span>
-                        <div video-work="item.id" tasks="param.tasks" room="{{param.room_id}}" video="{{param.video_group_id}}" handle="update" title="编辑"></div>
+                        <div video-work="item.id" room="{{param.room_id}}" video="{{param.video_group_id}}" handle="update" title="编辑"></div>
                         <a class="btn btn-danger btn-sm btn-rounded" ng-click="del(key)" class="pull-right">删除</a>
                     </td>
                 </tr>
