--- a/app/scripts/views/directive/upload/showUpload.html
+++ b/app/scripts/views/directive/upload/showUpload.html
@@ -77,7 +77,31 @@
             color: #3c763d;
         }
     </style>
-    <div class="row" style="margin: 0" ng-if="max!=1" style="border: 1px #ccc solid;">
+    <div ng-if="max==1" class="row">
+        <div class="col-sm-5">
+            <div ng-repeat="(k,v) in images">
+                <div class="text-center" show-image url="v.pic_url || uploader.queue[k].qiniu_url" width="100" ng-if="v.pic_url || uploader.queue[k].qiniu_url"></div>
+                <div ng-show="uploader.isHTML5 && !v.pic_url" ng-thumb="{ file: uploader.queue[k]._file, height: 100 , itemobj : uploader.queue[k]}"></div>
+            </div>
+        </div>
+        <div class="col-sm-offset-1 col-sm-1">
+            <input class="form-control upload-image" type="file" nv-file-select uploader="uploader" multiple/>
+        </div>
+        <div class="col-sm-3">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width:{{uploader.queue[0].progress}}%;"></div>
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-danger btn-rounded btn-xs" ng-click="removeAll()" ng-disabled="!uploader.queue.length">
+                <span class="glyphicon glyphicon-trash"></span>移除
+            </button>
+            <button type="button" class="btn btn-success btn-rounded btn-xs" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
+                <span class="glyphicon glyphicon-upload"></span>上传
+            </button>
+        </div>
+    </div>
+    <div class="row" ng-if="max!=1" style="margin: 0;border: 1px #ccc solid;">
         <div class="panel panel-info" style="border: 0">
             <!--<div class="panel-heading"></div>-->
             <div class="panel-body dndsimpleDemo" ng-show="images&&images.length>0">
@@ -145,34 +169,6 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <div ng-if="max==1" class="row">
-        <div class="col-sm-5">
-            <div ng-repeat="(k,v) in images">
-                <div class="text-center" show-image url="v.pic_url || uploader.queue[k].qiniu_url" width="100" ng-if="v.pic_url || uploader.queue[k].qiniu_url"></div>
-                <div ng-show="uploader.isHTML5 && !v.pic_url" ng-thumb="{ file: uploader.queue[k]._file, height: 100 , itemobj : uploader.queue[k]}"></div>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width:{{uploader.progress}}%"></div>
-            </div>
-            <!--<div class="row">-->
-                <!--<span ng-show="uploader.queue.length>=1" ng-bind="images[0].pic_url || uploader.queue[0].qiniu_url"></span>-->
-            <!--</div>-->
-        </div>
-        <div class="col-sm-2">
-            <button type="button" class="btn btn-success btn-rounded btn-sm" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
-                <span class="glyphicon glyphicon-upload"></span>上传
-            </button>
-            <button type="button" class="btn btn-danger btn-rounded btn-sm" ng-click="removeAll()" ng-disabled="!uploader.queue.length">
-                <span class="glyphicon glyphicon-trash"></span>移除
-            </button>
-        </div>
-        <div class="col-sm-1">
-            <input class="form-control upload-image" type="file" nv-file-select uploader="uploader" multiple/>
-        </div>
-        <div class="col-sm-1"></div>
     </div>
     <div ng-class="{'hide':disabled}" style="padding: 10px;" ng-if="max!=1">
         <div class="form-group" style="margin-bottom: 5px;">
