--- a/app/scripts/views/live/videogroups/workStems.html
+++ b/app/scripts/views/live/videogroups/workStems.html
@@ -55,7 +55,7 @@
                          source-api=""></div>
                     <div form-textarea ng-model="item.body_value" no-label="true" ng-if="item.body_type==1" text="文字"></div>
                     <div form-image-single ng-model="item.body_value" no-label="true" ng-if="item.body_type==2" text="图片"></div>
-                    <div form-media-single ng-model="item.body_value" no-label="true" ng-if="item.body_type==3" text="语音"></div>
+                    <div form-media-single ng-model="item.body_value" no-label="true" media-type="audio"  ng-if="item.body_type==3" text="语音"></div>
                 </td>
                 <td dnd-nodrag>
                     <a class="btn btn-danger btn-sm btn-rounded" ng-click="del(key)" class="pull-right">删除</a>
