--- a/app/scripts/views/live/videogroups/taskList.html
+++ b/app/scripts/views/live/videogroups/taskList.html
@@ -7,12 +7,10 @@
             <form class="form-horizontal" name="FormBody" novalidate>
                 <table style="width: 100%;">
                     <tr>
+                        <td class=""><h3 class="text-primary text-center">点击题目ID标记拖拽可调整顺序，需要保存草稿或发布任务才能生效</h3></td>
                         <td>
-                            <div video-work="param" ext="param.tasks" handle="add" ng-if="handle" title="添加" class="pull-right"></div>
+                            <div video-work="param" ext="param.tasks" handle="add" ng-if="handle" title="添加"></div>
                         </td>
-                    </tr>
-                    <tr>
-                        <td><h3 class="text-primary text-center">点击题目ID标记拖拽可调整顺序，需要保存草稿或发布任务才能生效</h3></td>
                     </tr>
                 </table>
                 <div class="panel panel-primary">
