--- a/app/scripts/views/live/videogroups/userTaskList.html
+++ b/app/scripts/views/live/videogroups/userTaskList.html
@@ -25,7 +25,7 @@
                 <td><span ng-bind="item.work.options_count"></span></td>
                 <td><span ng-bind="item.is_right|keyVal:'1':'正确':'2':'错误'"></span></td>
                 <td>
-                    <div video-work="item.id" user-work="item.work_id" room="{{param.room_id}}" video="{{param.video_group_id}}" handle="read" title="查看题目"></div>
+                    <div video-work="item.work_id" answer="item.answer" user-work="item.id" room="{{param.room_id}}" video="{{param.video_group_id}}" handle="read" title="查看题目"></div>
                 </td>
             </tr>
             </tbody>
