--- a/app/scripts/views/live/videogroups/workRead.html
+++ b/app/scripts/views/live/videogroups/workRead.html
@@ -8,11 +8,20 @@
                 <div form-input text="题目ID" ng-model="param.id" ng-disabled="true"></div>
                 <div form-input text="作业ID" ng-model="userWorkID" ng-disabled="true"></div>
                 <div ng-repeat="stem in param.stems">
-                    <p class="col-sm-offset-2 col-sm-10" ng-if="stem.body_type == 1" ng-bind="stem.body_value"></p>
+                    <div form-textarea text="题目" ng-if="stem.body_type == 1" ng-model="stem.body_value" ng-disabled="true"></div>
+
                     <div class="col-sm-offset-2 col-sm-10" ng-if="stem.body_type == 2" show-image url="stem.body_value" width="150"></div>
+
                     <p class="col-sm-offset-2 col-sm-10" ng-if="stem.body_type == 3">
                         <audio controls ng-src="{{sce(stem.body_value)}}"></audio>
                     </p>
+
+                    <div form-radio text="题目类型" ng-model="param.type" required="true" default="1" ng-disabled="true"
+                         source="[{text:'单选',value:'1'},{text:'多选',value:'2'}]" source-api=""></div>
+
+                    <div form-radio text="选项类型" ng-model="param.option_type" required="true" default="1" ng-disabled="true"
+                         source="[{text:'文字',value:'1'},{text:'图片',value:'2'},{text:'语音',value:'3'}]" source-api=""></div>
+
                 </div>
                 <div class="col-sm-offset-2 col-sm-8">
                     <table class="table table-bordered table-striped table-hover">
@@ -21,7 +30,7 @@
                             <th class="width100">序号</th>
                             <th class="">选项内容</th>
                             <th class="width50">正确选项</th>
-                            <th class="width100" ng-if="answer!==''">用户答案</th>
+                            <th class="width100" ng-if="answer">用户答案</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -40,12 +49,11 @@
                                     <span></span>&nbsp;
                                 </label>
                             </td>
-                            <td ng-if="answer!==''" ng-init="item.userAnswer = (','+answer+',').indexOf(','+item.option_no+',')!==-1">
+                            <td ng-if="answer" ng-init="item.userAnswer = (','+answer+',').indexOf(','+item.option_no+',')!==-1">
                                 <label class="checkbox-inline checkbox1">
-                                    <input type="checkbox" ng-model="item.userAnswer" name="{{'answer'+key}}" ng-true-value="true" ng-false-value="false">
+                                    <input type="checkbox" ng-disabled="true" ng-model="item.userAnswer" name="{{'answer'+key}}" ng-true-value="true" ng-false-value="false">
                                     <span></span>&nbsp;
                                 </label>
-                                <!--<span ng-bind="(','+answer+',').indexOf(','+item.option_no+',')!==-1?'已选择':'&#45;&#45;&#45;&#45;'"></span>-->
                             </td>
                         </tr>
                         </tbody>
